--- a/CH_05_5_DBSCAN.ipynb
+++ b/CH_05_5_DBSCAN.ipynb
@@ -219,7 +219,8 @@
    "source": [
     "eps를 1.5로 늘린 결과 포함 영역이 커져 더 많은 데이터를 포함하게 되어 노이즈 데이터가 0개가 되었습니다. \n",
     "\n",
-    "지금까지 군집화에 대해서 알아보았습니다. 다음 챕터에서는 최근 ML에서 각광을 받고 있는 추천시스템에 대해서 알아보도록 하겠습니다. 감사합니다."
+    "지금까지 군집화에 대해서 알아보았습니다. 
+    "5개의 챕터로 머신러닝에 대한 전반적이 공부를 해보았습니다. 이제 여러분이 원하는 분야의 ML문제를 찾아서 실제로 혼자서 분석을 해보시기 바랍니다! Keep Going!!
    ]
   }
  ],
